--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         ></video>
       </a-assets>
 
-      <a-marker preset="hiro">
+<!--  <a-marker preset="hiro"> -->
+      <a-marker
+        type="pattern"
+        url="https://raw.githubusercontent.com/KirstenLuz/cube-invite/refs/heads/main/pattern-Cube_QRCode.patt"
+        controlador
+      >
         <a-video
           width="1.5"
           height="1"
