--- a/index.html
+++ b/index.html
@@ -27,19 +27,6 @@
     });
   </script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      let videoEl = document.querySelector("#videoElement");
-      let userAgent = navigator.userAgent;
-
-      if (userAgent.includes("Samsung") || userAgent.includes("Motorola")) {
-        videoEl.setAttribute("scale", "1 1 1");
-      } else {
-        videoEl.setAttribute("scale", "0.8 0.8 0.8"); // Reduz em dispositivos problemáticos
-      }
-    });
-  </script>
-
   <body style="margin: 0px; overflow: hidden">
     <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
       <a-assets>
@@ -59,7 +46,6 @@
         controlador
       >
         <a-video
-          id="videoElement"
           width="1.5"
           height="1"
           rotation="0 0 0"
@@ -69,7 +55,7 @@
         ></a-video>
       </a-marker>
 
-      <a-entity camera></a-entity>
+      <a-entity camera="fov: 75; position: 0 1.6 0;"></a-entity>
     </a-scene>
   </body>
 </html>
