--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </script>
 
   <body style="margin: 0px; overflow: hidden">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; sourceWidth:1280; sourceHeight:720; debugUIEnabled: false;">
       <a-assets>
         <video
           id="video"
@@ -55,7 +55,7 @@
         ></a-video>
       </a-marker>
 
-      <a-entity camera="fov: 75; position: 0 1.6 0;"></a-entity>
+      <a-entity camera="fov: 110; position: 0 1.6 3;"></a-entity>
     </a-scene>
   </body>
 </html>
