--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       },
     });
   </script>
-  
+
   <body style="margin: 0px; overflow: hidden">
     <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
       <a-assets>
@@ -36,10 +36,10 @@
           loop
           playsinline
           controls
+          autoplay
         ></video>
       </a-assets>
 
-<!--  <a-marker preset="hiro"> -->
       <a-marker
         type="pattern"
         url="https://raw.githubusercontent.com/KirstenLuz/cube-invite/refs/heads/main/pattern-Cube_QRCode.patt"
