Alteração de foco da câmera

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         ></a-video>
       </a-marker>
 
-      <a-entity camera></a-entity>
+      <a-entity camera position="0 0 5" fov="80"></a-entity>
     </a-scene>
   </body>
 </html>
