--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
   <body style="margin: 0px; overflow: hidden">
     <!-- <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;"> -->
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;">
+    <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="debugUIEnabled: false; trackingMethod: best; sourceType: webcam;"
+    >
       <a-assets>
         <video
           id="video"
