--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   </script>
 
   <body style="margin: 0px; overflow: hidden">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
+    <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    >
       <a-assets>
         <video
           id="video"
@@ -51,7 +55,7 @@
         ></a-video>
       </a-marker>
 
-      <a-entity camera></a-entity>
+      <a-entity camera position="0 0 5" fov="80"></a-entity>
     </a-scene>
   </body>
 </html>
