--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   </script>
 
   <body style="margin: 0px; overflow: hidden">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
+    <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="debugUIEnabled: false; sourceType: webcam;"
+    >
       <a-assets>
         <video
           id="video"
