--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
   </script>
 
   <body style="margin: 0px; overflow: hidden">
-    <a-scene
-      vr-mode-ui="enabled: false"
-      embedded
-      arjs="debugUIEnabled: false; sourceType: webcam;"
-    >
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
       <a-assets>
         <video
           id="video"
